--- a/territoriesavailable.html
+++ b/territoriesavailable.html
@@ -105,7 +105,7 @@
       <div class="territoriesavailable-main-logo">
         <a
           class="primary-horizontal-logo-gold-12"
-          id="primaryHorizontalLogoGold1"
+          id="primaryHorizontalLogoGold1" href="./index.html"
         >
         </a>
       </div>
