--- a/whychooseus.html
+++ b/whychooseus.html
@@ -88,7 +88,7 @@
       <div class="membership-main-logo1">
         <a
           class="primary-horizontal-logo-gold-14"
-          id="primaryHorizontalLogoGold1"
+          id="primaryHorizontalLogoGold1" href="./index.html"
         >
         </a>
       </div>
